# stud

./: .gitignore  CLAUDE.md  LICENSE  README.md  implementation_plan.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  lib.rs  main.rs  plugin.rs
src/components/: CommandPalette.tsx  ConnectionStatus.tsx  EmptyState.tsx  QuickActions.tsx  SettingsPanel.tsx  TypingIndicator.tsx  WelcomeCard.tsx
src/components/chat/: ContextChips.tsx  DiffView.tsx  InstancePicker.tsx  InstanceTree.tsx  ModelSelector.tsx  QuestionPrompt.tsx
src/components/icons/: Avatars.tsx  Icon.tsx  Logo.tsx  ProviderIcon.tsx
src/components/prereq/: PrereqWizard.tsx  index.ts
src/components/settings/: SettingsDialog.tsx
src/components/ui/: message.tsx  response-stream.tsx  tool-call.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/ai/: codex-chat.ts  prompt-improver.ts  providers.ts
src/lib/auth/: codex.ts  index.ts
src/lib/auth/__tests__/: codex.test.ts
src/lib/models/: fetcher.ts  types.ts
src/lib/models/__tests__/: fetcher.test.ts
src/lib/roblox/: index.ts  toolbox.ts  tools.ts
src/pages/: Home.tsx
src/stores/: auth.ts  chat.ts  models.ts  plugin.ts  prereq.ts  roblox.ts  settings.ts
src/stores/__tests__/: models.test.ts
src/test/: setup.ts
studio-plugin/: stud-bridge.server.lua
